@@ -2,6 +2,8 @@ Mahout Change Log
 
 Release 1.0 - unreleased
 
+  MAHOUT-1497: mahout resplit not producing splited files (ssc)
+
   MAHOUT-1513: Deprecate Canopy Clustering (ssc)
 
   MAHOUT-1440: Add option to set the RNG seed for inital cluster generation in Kmeans/fKmeans (Andrew Palumbo via ssc)
